# warehouse_simulation

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
src/: App.css  App.tsx  MenuBar.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/commands/: finance.rs  layout.rs  mod.rs  procurement.rs  resource.rs  sales.rs  warehouse.rs
src-tauri/src/commands/sim/: mod.rs  task.rs
src-tauri/src/layout/: default_layout.rs  mod.rs
src-tauri/src/models/: common.rs  finance.rs  mod.rs  procurement.rs  resource.rs  sales.rs  warehouse.rs
src-tauri/src/services/: finance.rs  mock_odata_client.rs  mod.rs  procurement.rs  resource.rs  sales.rs  warehouse.rs
src-tauri/src/simulation/: engine.rs  generator.rs  mod.rs  types.rs
src-tauri/src/utils/: cache.rs  error.rs  mod.rs  odata.rs  odata_client.rs
src/app/: App.tsx
src/components/: BlankPage.tsx  Layout.tsx  Settings.tsx  WarehouseSimulator.tsx
src/components/dashboard/: Dashboard.tsx
src/components/shared-theme/: AppTheme.tsx
src/contexts/: DataSourceContext.tsx  LayoutContext.ts  LayoutProvider.tsx  NotificationContext.tsx  SnackbarContext.tsx  SnackbarProvider.tsx  types.ts
src/hooks/: useWarehouseLayout.ts  useWarehouseSimulation.ts  useWarehouseTasks.ts
src/layout/: ProcessMiningLayout.tsx
src/router/: AppRouter.tsx
src/shared-theme/: AppTheme.tsx
src/types/: global.d.ts
src/utils/: layoutLoader.ts  warehouse.ts
(+56 files in other folders)
