[package]
name = "warehouse_simulation"
version = "0.1.0"
edition = "2021"

description = "A desktop Warehouse Simulation app with SAP master-data integration"
authors = ["nuar-dev <nuar@nuar.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nuar-dev/warehouse_simulation"
homepage = "https://github.com/nuar-dev/warehouse_simulation#readme"
documentation = "https://docs.rs/warehouse_simulation_lib"
readme = "README.md"
keywords = ["tauri", "warehouse", "sap", "simulation", "logistics", "procces_mining"]
categories = ["command-line-utilities", "data-processing", "gui"]
# Custom metadata for your own CI/tooling, if needed
[package.metadata]
default-layout-path = "layouts/default.json"

[lib]
# The `_lib` suffix prevents name collisions on Windows.
name = "warehouse_simulation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = { version = "2.0.0-rc.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# UUID generation
uuid = { version = "1.1", features = ["v4"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
